--- a/random/_posts/2017-07-16-Intro.md
+++ b/random/_posts/2017-07-16-Intro.md
@@ -2,12 +2,11 @@
 layout: post
 title: "Hello World!"
 author_profile: true
-categories: random
-#categories: [random,photography]
+category: random
 ---
 
 This is my first post! Looking forward to many more posts ahead. I will be writing about my life 
 experiences: Bebe, Data Exploration, Photography and other random stuffs. <br />
 
 Stayed tuned! 
-![Feeling accomplished](/assets/graduation.png)
+![Feeling accomplished](/assets/images/graduation.png)
