--- a/random/_posts/2017-07-16-Intro.md
+++ b/random/_posts/2017-07-16-Intro.md
@@ -9,4 +9,4 @@ This is my first post! Looking forward to many more posts ahead. I will be writi
 experiences: Bebe, Data Exploration, Photography and other random stuffs. <br />
 
 Stayed tuned! 
-![Feeling accomplished](/assets/images/graduation.png)
+![Feeling accomplished]("/assets/images/graduation.png")
