--- a/random/_posts/2017-07-16-Intro.md
+++ b/random/_posts/2017-07-16-Intro.md
@@ -8,5 +8,5 @@ category: random
 This is my first post! Looking forward to many more posts ahead. I will be writing about my life 
 experiences: Bebe, Data Exploration, Photography and other random stuffs. <br />
 
-Stayed tuned! 
-![Feeling accomplished]("/assets/images/graduation.png")
+Stayed tuned! <br />
+{% include image name="graduation.png" caption="Feeling accomplished" %}
