--- a/random/_posts/2017-07-16-Intro.md
+++ b/random/_posts/2017-07-16-Intro.md
@@ -1,7 +1,7 @@
 ---
 layout: single
 title: Hello World!
-category: random
+categories: random
 ---
 
 This is my first post! Looking forward to many more posts ahead. I will be writing about my life 
