--- a/random/_posts/2017-07-16-Intro.md
+++ b/random/_posts/2017-07-16-Intro.md
@@ -2,6 +2,9 @@
 layout: single
 title: Hello World!
 categories: random
+header:
+  overlay_image: /assets/posts/2017-07-16-hello-world/toe-flowers.jpg
+  caption: "Photo credit: [**Unsplash**](https://cdn.shopify.com)"
 ---
 
 This is my first post! Looking forward to many more posts ahead. I will be writing about my life 
