--- a/random/_posts/2017-07-16-Intro.md
+++ b/random/_posts/2017-07-16-Intro.md
@@ -4,7 +4,8 @@ title: Hello World!
 categories: random
 header:
   overlay_image: /assets/posts/2017-07-16-hello-world/toe-flowers.jpg
-  caption: "Photo credit: [**Unsplash**](https://cdn.shopify.com)"
+  caption: "Photo credit: [**Artsy Office**]"
+  exerpt: ""
 ---
 
 This is my first post! Looking forward to many more posts ahead. I will be writing about my life 
