--- a/random/_posts/2017-07-16-Intro.md
+++ b/random/_posts/2017-07-16-Intro.md
@@ -3,7 +3,7 @@ layout: single
 title: Hello World!
 categories: random
 header:
-  overlay_image: /assets/posts/2017-07-16-hello-world/toe-flowers.jpg
+  image: /assets/posts/2017-07-16-hello-world/toe-flowers.jpg
   caption: "Photo credit: [**Artsy Office**]"
   exerpt: ""
 ---
