--- a/fun/_posts/2017-07-16-Intro.md
+++ b/fun/_posts/2017-07-16-Intro.md
@@ -1,7 +1,7 @@
 ---
 layout: single
 title: Hello World!
-categories: random
+categories: fun
 header:
   overlay_image: /assets/posts/2017-07-16-hello-world/toe-flowers.jpg
   caption: "Photo credit: [**Artsy Office**]"
